--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,3 +1,10 @@
+@import "../src/styles/Atoms/ButtonLogin.scss";
+@import "../src/styles/Atoms/ButtonSignUp.scss";
+@import "../src/styles/Variables.scss";
+@import "../src/styles/Organisms/NavBar.scss";
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $primaryColor ;
 }
 
 code {
