--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -2,6 +2,10 @@
 @import "../src/styles/Atoms/ButtonSignUp.scss";
 @import "../src/styles/Variables.scss";
 @import "../src/styles/Organisms/NavBar.scss";
+@import "../src/components/Organisms/Footer/Footer.scss";
+@import "../src/components/Molecules/SocialNetwork/SocialNetworkSection.scss";
+@import "../src/components/Molecules/Legality/Legacity.scss";
+@import "../src/components/Molecules/Faq/Faq.scss";
 
 
 
