--- a/front/src/styles/Variables.scss
+++ b/front/src/styles/Variables.scss
@@ -6,6 +6,7 @@ $tertiaryColor : #22C79A;
 $font-family-primary: 'Karma', sans-serif;
 $font-family-secondary: 'Karma', sans-serif;
 
+$font-size-xxsmall: 10px;
 $font-size-small: 14px;
 $font-size-medium: 16px;
 $font-size-large: 18px;
