--- a/front/src/components/Atoms/ArrowButton/ArrowButton.scss
+++ b/front/src/components/Atoms/ArrowButton/ArrowButton.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0.5rem;
   cursor: pointer;
 
   &.sm {
@@ -16,12 +17,16 @@
 
   &.md {
     height: 60px;
+    min-height: 60px;
     width: 60px;
+    min-width: 60px;
   }
 
   &.lg {
     height: 80px;
+    min-height: 80px;
     width: 80px;
+    min-width: 80px;
   }
 
   svg {
