--- a/front/src/components/Organisms/OpinionsCarousel/OpinionsCarousel.scss
+++ b/front/src/components/Organisms/OpinionsCarousel/OpinionsCarousel.scss
@@ -3,8 +3,12 @@
   gap: 2;
   grid-gap: 2;
   align-items: center;
+  justify-content: space-around;
+  width: 100%;
 
   .opinions {
     display: flex;
+    justify-content: space-between;
+    gap: 10px;
   }
 }
