connect back to front, post users function but have a little problem with confirm password

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -6,6 +6,8 @@
 @import "../src/components/Molecules/SocialNetwork/SocialNetworkSection.scss";
 @import "../src/components/Molecules/Legality/Legacity.scss";
 @import "../src/components/Molecules/Faq/Faq.scss";
+@import "../src/components/Organisms/SignUp/SignUp.scss";
+@import "../src/Pages/LoginSignUp.scss";
 
 
 
