--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,13 +1,16 @@
-@import '../src/styles/Atoms/ButtonLogin.scss';
-@import '../src/styles/Atoms/ButtonSignUp.scss';
-@import '../src/styles/Variables.scss';
-@import '../src/styles/Organisms/NavBar.scss';
-@import '../src/components/Molecules/HomePageSectionPrésentation/homePageSectionPrésentation.scss';
-@import '../src/components/Organisms/Footer/Footer.scss';
-@import '../src/components/Molecules/SocialNetwork/SocialNetworkSection.scss';
-@import '../src/components/Molecules/Legality/Legacity.scss';
-@import '../src/components/Molecules/Faq/Faq.scss';
-@import '../src/components/Templates/OpinionsSection/OpinionsSection.scss';
+@import "../src/styles/Atoms/ButtonLogin.scss";
+@import "../src/styles/Atoms/ButtonSignUp.scss";
+@import "../src/styles/Variables.scss";
+@import "../src/styles/Organisms/NavBar.scss";
+@import"../src/components/Molecules/HomePageSectionPrésentation/homePageSectionPrésentation.scss";
+@import "../src/components/Organisms/Footer/Footer.scss";
+@import "../src/components/Molecules/SocialNetwork/SocialNetworkSection.scss";
+@import "../src/components/Molecules/Legality/Legacity.scss";
+@import "../src/components/Molecules/Faq/Faq.scss";
+@import "../src/components/Organisms/SignUp/SignUp.scss";
+@import "../src/Pages/LoginSignUp.scss";
+
+
 
 body {
   margin: 0;
