--- a/front/src/components/Organisms/Footer/Footer.scss
+++ b/front/src/components/Organisms/Footer/Footer.scss
@@ -18,8 +18,7 @@
     }
 
     .logo{
-        width: 650px;
-        height: 350px;
+        height: 40vh;
         position: relative;
         top: -20px;
 
