front implementation on progress

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -7,6 +7,7 @@
 @import "../src/components/Molecules/SocialNetwork/SocialNetworkSection.scss";
 @import "../src/components/Molecules/Legality/Legacity.scss";
 @import "../src/components/Molecules/Faq/Faq.scss";
+@import "../src/components/Organisms/ChallengeDashboard/ChallengeDashboard.scss";
 
 
 
