--- a/front/src/components/Organisms/ChallengeDashboard/ChallengeDashboard.scss
+++ b/front/src/components/Organisms/ChallengeDashboard/ChallengeDashboard.scss
@@ -1,9 +1,24 @@
 .challenge-container {
-    color: #fff;
-    text-align: center;
+    border: 1px solid #fff;
+    background-color: #fff;
+    width: 80%;
+    border-radius: 1%;
     font-family: Karma;
-    font-size: 12px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
+.challenge-title {
+color: $tertiaryColor;
+text-align: center;
+}
+.challenge-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
+.challenge-content > div {
+    border: 1px solid black;
+    padding: 5px;
+  }
