Finished comments on homepage

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -9,8 +9,7 @@
 @import "../src/components/Molecules/Faq/Faq.scss";
 @import "../src/components/Organisms/SignUp/SignUp.scss";
 @import "../src/Pages/LoginSignUp.scss";
-
-
+@import '../src/components/Templates/OpinionsSection/OpinionsSection.scss';
 
 body {
   margin: 0;
